Use local broker

--- a/00 - Aiven Setup.ipynb
+++ b/00 - Aiven Setup.ipynb
@@ -32,7 +32,7 @@
     "echo \"\"\"\n",
     "FOLDER_NAME=kafkacerts\n",
     "CLOUD=google-europe-west3\n",
-    "KAFKA_NAME=kafka-webinar\n",
+    "KAFKA_NAME=python-notebooks-for-apache-kafka-kafka-1\n",
     "POSTGRES_NAME=pg-webinar\n",
     "AIVEN_PLAN_NAME=business-4\n",
     "TOPIC_NAME=pizzas\n",
@@ -121,20 +121,20 @@
    "source": [
     "%%bash\n",
     "# Download all certificates\n",
-    "source .env\n",
+    "#source .env\n",
     "source config/profile_info.sh\n",
     "\n",
     "mkdir -p kafkacerts\n",
-    "avn --auth-token $TOKEN service user-creds-download $KAFKA_NAME --project $PROJECT_NAME -d $FOLDER_NAME --username avnadmin\n",
+    "#avn --auth-token $TOKEN service user-creds-download $KAFKA_NAME --project $PROJECT_NAME -d $FOLDER_NAME --username avnadmin\n",
     "\n",
     "# get KAFKA URL and store the `HOSTNAME` and `PORT`\n",
-    "HOSTNAME=$(avn --auth-token $TOKEN service get $KAFKA_NAME --project=$PROJECT_NAME  --json  | jq -r '.components[] | select (.component==\"kafka\") | .host')\n",
-    "PORT=$(avn --auth-token $TOKEN service get $KAFKA_NAME --project=$PROJECT_NAME  --json  | jq -r '.components[] | select (.component==\"kafka\") | .port')\n",
+    "#HOSTNAME=$(avn --auth-token $TOKEN service get $KAFKA_NAME --project=$PROJECT_NAME  --json  | jq -r '.components[] | select (.component==\"kafka\") | .host')\n",
+    "#PORT=$(avn --auth-token $TOKEN service get $KAFKA_NAME --project=$PROJECT_NAME  --json  | jq -r '.components[] | select (.component==\"kafka\") | .port')\n",
     "\n",
-    "echo \"hostname = \\\"$HOSTNAME\\\"\" > config/kafka_config.py\n",
-    "echo \"port = $PORT\" >> config/kafka_config.py\n",
+    "echo \"hostname = \\\"python-notebooks-for-apache-kafka-kafka-1\\\"\" > config/kafka_config.py\n",
+    "echo \"port = 9092\" >> config/kafka_config.py\n",
     "echo \"cert_folder = \\\"$FOLDER_NAME\\\"\" >> config/kafka_config.py\n",
-    "echo \"topic_name = \\\"$TOPIC_NAME\\\"\" >> config/kafka_config.py\n",
+    "echo \"topic_name = \\\"pizzas\\\"\" >> config/kafka_config.py\n",
     "echo \"pg_user = \\\"$PG_USER\\\"\" >> config/kafka_config.py\n",
     "echo \"pg_pwd = \\\"$PG_PWD\\\"\" >> config/kafka_config.py\n",
     "echo \"timeout_ms = $KAFKA_TIMEOUT\" >> config/kafka_config.py"
