--- a/01 - Producer.ipynb
+++ b/01 - Producer.ipynb
@@ -51,10 +51,10 @@
     "\n",
     "producer = KafkaProducer(\n",
     " bootstrap_servers=hostname+\":\"+str(port),\n",
-    " security_protocol=\"SSL\",\n",
-    " ssl_cafile=cert_folder+\"/ca.pem\",\n",
-    " ssl_certfile=cert_folder+\"/service.cert\",\n",
-    " ssl_keyfile=cert_folder+\"/service.key\",\n",
+    " security_protocol=\"PLAINTEXT\",\n",
+    " # ssl_cafile=cert_folder+\"/ca.pem\",\n",
+    " # ssl_certfile=cert_folder+\"/service.cert\",\n",
+    " # ssl_keyfile=cert_folder+\"/service.key\",\n",
     " value_serializer=lambda v: json.dumps(v).encode('ascii'),\n",
     " key_serializer=lambda v: json.dumps(v).encode('ascii')\n",
     ")"
