--- a/02 - Consumer.ipynb
+++ b/02 - Consumer.ipynb
@@ -39,10 +39,10 @@
     " client_id = \"client1\",\n",
     " group_id = group_id,\n",
     " bootstrap_servers = hostname+\":\"+str(port),\n",
-    " security_protocol = \"SSL\",\n",
-    " ssl_cafile = cert_folder+\"/ca.pem\",\n",
-    " ssl_certfile = cert_folder+\"/service.cert\",\n",
-    " ssl_keyfile = cert_folder+\"/service.key\",\n",
+    " security_protocol = \"PLAINTEXT\",\n",
+    " # ssl_cafile = cert_folder+\"/ca.pem\",\n",
+    " # ssl_certfile = cert_folder+\"/service.cert\",\n",
+    " # ssl_keyfile = cert_folder+\"/service.key\",\n",
     " value_deserializer = lambda v: json.loads(v.decode('ascii')),\n",
     " key_deserializer = lambda v: json.loads(v.decode('ascii')),\n",
     " max_poll_records = 10\n",
