--- a/03 - 00 - Partition Producer.ipynb
+++ b/03 - 00 - Partition Producer.ipynb
@@ -25,10 +25,10 @@
     "\n",
     "producer = KafkaProducer(\n",
     "        bootstrap_servers=hostname+\":\"+str(port),\n",
-    "        security_protocol=\"SSL\",\n",
-    "        ssl_cafile=cert_folder+\"/ca.pem\",\n",
-    "        ssl_certfile=cert_folder+\"/service.cert\",\n",
-    "        ssl_keyfile=cert_folder+\"/service.key\",\n",
+    "        security_protocol=\"PLAINTEXT\",\n",
+    "        # ssl_cafile=cert_folder+\"/ca.pem\",\n",
+    "        # ssl_certfile=cert_folder+\"/service.cert\",\n",
+    "        # ssl_keyfile=cert_folder+\"/service.key\",\n",
     "        value_serializer=lambda v: json.dumps(v).encode('ascii'),\n",
     "        key_serializer=lambda v: json.dumps(v).encode('ascii')   \n",
     "    )"
@@ -53,10 +53,10 @@
     "admin = KafkaAdminClient(\n",
     "        client_id ='admin',\n",
     "        bootstrap_servers=hostname+\":\"+str(port),\n",
-    "        security_protocol=\"SSL\",\n",
-    "        ssl_cafile=cert_folder+\"/ca.pem\",\n",
-    "        ssl_certfile=cert_folder+\"/service.cert\",\n",
-    "        ssl_keyfile=cert_folder+\"/service.key\",\n",
+    "        security_protocol=\"PLAINTEXT\",\n",
+    "        # ssl_cafile=cert_folder+\"/ca.pem\",\n",
+    "        # ssl_certfile=cert_folder+\"/service.cert\",\n",
+    "        # ssl_keyfile=cert_folder+\"/service.key\",\n",
     "    )\n",
     "\n",
     "topic_name_partitioned=topic_name+\"_partitioned\"\n",
