--- a/03 - 01 - Consumer - Partition 0.ipynb
+++ b/03 - 01 - Consumer - Partition 0.ipynb
@@ -34,10 +34,10 @@
     "consumer_partition_0 = KafkaConsumer(\n",
     "        group_id=group_id+\"_partitioned\",\n",
     "        bootstrap_servers=hostname+\":\"+str(port),\n",
-    "        security_protocol=\"SSL\",\n",
-    "        ssl_cafile=cert_folder+\"/ca.pem\",\n",
-    "        ssl_certfile=cert_folder+\"/service.cert\",\n",
-    "        ssl_keyfile=cert_folder+\"/service.key\",\n",
+    "        security_protocol=\"PLAINTEXT\",\n",
+    "        # ssl_cafile=cert_folder+\"/ca.pem\",\n",
+    "        # ssl_certfile=cert_folder+\"/service.cert\",\n",
+    "        # ssl_keyfile=cert_folder+\"/service.key\",\n",
     "        value_deserializer = lambda v: json.loads(v.decode('ascii')),\n",
     "        key_deserializer = lambda v: json.loads(v.decode('ascii')),\n",
     "        auto_offset_reset='earliest',\n",
